--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@ body {
   background-image: url(./static/squares.png) 
 }
   
-.box {
+.cell {
   display: inline-block;       
   border: 1px solid black;
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
   margin-left: -1px;
   margin-bottom: -1px;
   }
@@ -19,7 +19,7 @@ body {
   background-color: green;
 }
   
-.box:hover { 
+.cell:hover { 
   background: #00CCFF;
 }
 
@@ -30,9 +30,10 @@ body {
 }
 
 .grid {
-  width: 150px;
+  width: 252px;
   line-height: 0;
   margin: auto;
+  background-color: "red";
   box-shadow: 0px 0px 20px white;
   margin-top: 20px;
 }
